fixed body text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-align: center;
 }
 
 * {
@@ -16,6 +17,8 @@ main {
   padding: 5rem 0;
   margin-top: 50px;
   margin-bottom: 70px;
+  margin-left: 20px;
+  margin-right: 20px;
   flex: 1;
   position: sticky;
   display: flex;
